--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p>
         Our website about cooking and health food , we hope to exciting with us
     </p>
-    <img src="whole-foods-netherlands.jpg" alt="health food">
+    <img src="https://www.iamexpat.nl/sites/default/files/styles/article--full/public/whole-foods-netherlands.jpg?itok=bjnGVq8d" alt="health food">
 
 
 </body>
